[Fix] trainingbit_view: Edit button linking wrong
The trainer/admin "Edit training bit" button was linking to
`trainingbit_edit` which is the cover editing page.

It should be linking to `trainingbit_edit_content` which is now does.

--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -25,7 +25,7 @@
 
   {# Edit trainingbit button #}
   {% permission request.user has 'skills.change_trainingbit' of trainingbit %}
-    <a href="{% url 'skills:trainingbit_edit' trainingbit.id %}" class="button info admin-button">Edit training bit</a>
+    <a href="{% url 'skills:trainingbit_edit_content' trainingbit.id %}" class="button info admin-button">Edit training bit</a>
   {% endpermission %}
 
   {# Delete trainingbit button #}
