--- a/scss/trainingbit_view.scss
+++ b/scss/trainingbit_view.scss
@@ -70,15 +70,8 @@ body.trainingbit-view {
   }
 }
 
-#trainingbit-completed-modal {
-  h2, h3 {
-    text-transform: none;
-    display: inline-block;
-  }
-  .trainingbit-title {
-    @extend %text-white-on-red;
-    margin-left: rem-calc(7px);
-    margin-right: rem-calc(7px);
-  }
+.project-form-errors {
+  background-color: $gcl-browngray;
+  padding: 2rem;
 }
 // .text-field {
