--- a/skills/templates/skills/partials/comment_list_compact.html
+++ b/skills/templates/skills/partials/comment_list_compact.html
@@ -1,5 +1,5 @@
 
-<div class="comment-list">
+<div class="comment-list-compact">
 {% if comments %}
 {% for comment in comments %}
   {% include 'skills/partials/comment_entry_compact.html' %}
