--- a/skills/templates/skills/partials/comment_entry_compact.html
+++ b/skills/templates/skills/partials/comment_entry_compact.html
@@ -1,7 +1,7 @@
 {% load gcl_utils %}
 {% load permissionif %}
 
-<div class="comment gcl-object" style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}">
+<div class="comment-compact gcl-object" style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}">
 
     {% if comment.is_deleted %}
     <span class="icon block"></span>
